Aggiunto algoritmo per svm

--- a/polynomial_regression.ipynb
+++ b/polynomial_regression.ipynb
@@ -562,6 +562,55 @@
     "plt.title('Importanza delle Feature')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Support Vector Regression (SVR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inizio dell'addestramento del modello SVR...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "# Addestramento del modello\n",
+    "print(\"Inizio dell'addestramento del modello SVR...\")\n",
+    "svr_model = SVR(kernel='rbf')\n",
+    "svr_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predizione sui dati di testt\n",
+    "y_pred_scaled = svr_model.predict(X_test)\n",
+    "\n",
+    "# Calcolo degli errori\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f'Mean Squared Error: {mse}')\n",
+    "print(f'R^2: {r2}')\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.scatter(y_test, y_pred, alpha=0.5)\n",
+    "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], color='red', linestyle='--')\n",
+    "plt.xlabel('Valori Reali')\n",
+    "plt.ylabel('Valori Predetti')\n",
+    "plt.title('Support Vector Regression: Valori Reali vs Predetti')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
