--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -20,18 +20,18 @@
       "0    443207\n",
       "1    299418\n",
       "Name: count, dtype: int64\n",
-      "trq_measured  oat       mgt       pa          ias        np         ng       \n",
-      "73.00000      22.25000  619.4000   249.32640  0.00000    99.87000   95.14000     15\n",
-      "67.70000      18.00000  592.3000   576.07200  106.43750  99.95000   93.65000     13\n",
-      "57.10000      22.00000  567.3000   312.11520  94.75000   100.29000  91.17000     13\n",
-      "79.70000      19.75000  636.7000   503.52960  117.62500  100.29000  96.49000     13\n",
-      "77.10000      19.75000  626.8000   490.72800  117.25000  100.16000  95.73000     11\n",
-      "                                                                                 ..\n",
-      "97.80000      23.50000  701.7000  -46.63440   18.18750   99.47000   100.23000     1\n",
-      "98.13477      13.34870  688.1719   21.56133   20.30518   99.74415   97.54480      1\n",
-      "98.60000      16.75000  712.1000   401.72640  69.00000   99.14000   100.13000     1\n",
-      "99.00000      8.75000   646.0000  -103.02240  0.00000    96.72000   100.14000     1\n",
-      "104.73050     13.43342  699.0469   11.80324   43.02246   99.63282   98.82605      1\n",
+      "trq_measured  oat       mgt       pa         ias        np         ng      \n",
+      "73.0000       22.25000  619.4000  249.32640  0.00000    99.87000   95.14000    15\n",
+      "67.7000       18.00000  592.3000  576.07200  106.43750  99.95000   93.65000    13\n",
+      "57.1000       22.00000  567.3000  312.11520  94.75000   100.29000  91.17000    13\n",
+      "79.7000       19.75000  636.7000  503.52960  117.62500  100.29000  96.49000    13\n",
+      "64.4000       16.00000  587.0000  938.78400  102.43750  100.17000  93.35000    11\n",
+      "                                                                               ..\n",
+      "60.5000       8.00000   528.7000  296.26560  101.37500  100.03000  90.34000     1\n",
+      "                        528.6000  28.65120   90.12500   100.14000  90.09000     1\n",
+      "                        528.5000  50.29200   84.50000   100.20000  90.16000     1\n",
+      "                        528.4000  43.28160   86.18750   100.02000  90.01000     1\n",
+      "104.7305      13.43342  699.0469  11.80324   43.02246   99.63282   98.82605     1\n",
       "Name: count, Length: 546573, dtype: int64\n",
       "faulty\n",
       "0    299418\n",
@@ -62,8 +62,6 @@
     "# Separare le feature e le etichette\n",
     "X = df_train.drop(columns=[\"id\", \"faulty\", \"trq_margin\"])\n",
     "y = df_train[[\"faulty\", \"trq_margin\"]]\n",
-    "\n",
-    "target_size = 299418\n",
     "\n",
     "undersampler = RandomUnderSampler(sampling_strategy=1.0, random_state=42)  # Undersampling della classe maggioritaria\n",
     "\n",
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +236,7 @@
        "max    1.038079e+00  1.592338e+00  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +341,7 @@
        "max    598835.000000       1.0      33.597754"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,34 +361,21 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:2: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:3: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:2: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "<>:3: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "C:\\Users\\gians_ji5genm\\AppData\\Local\\Temp\\ipykernel_9612\\302961149.py:2: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "  X_t_res = pd.read_csv(\"Dataset\\Train\\X_train_resampled.csv\")\n",
-      "C:\\Users\\gians_ji5genm\\AppData\\Local\\Temp\\ipykernel_9612\\302961149.py:3: SyntaxWarning: invalid escape sequence '\\T'\n",
-      "  y_t_res = pd.read_csv(\"Dataset\\Train\\y_train_resampled.csv\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Lettura dei dataset\n",
-    "X_t_res = pd.read_csv(\"Dataset\\Train\\X_train_resampled.csv\")\n",
-    "y_t_res = pd.read_csv(\"Dataset\\Train\\y_train_resampled.csv\")\n",
+    "X_t_res = pd.read_csv(\"Dataset/Train/X_train_resampled.csv\")\n",
+    "y_t_res = pd.read_csv(\"Dataset/Train/y_train_resampled.csv\")\n",
     "\n",
     "#Definisco le variabili di interesse\n",
     "trq_measured = X_t_res['trq_measured']\n",
     "trq_margin = y_t_res['trq_margin']\n",
+    "faulty = y_t_res['faulty']\n",
     "trq_target = 0\n",
     "\n",
     "#Calcolo del trq_target\n",
     "X_t_res['trq_target'] = trq_measured / (1 + (trq_margin / 100))\n",
+    "X_t_res['faulty'] = faulty\n",
     "\n",
     "# Salvataggio del nuovo dataset con la colonna aggiunta\n",
     "X_t_res.to_csv(\"Dataset/Train/X_train_resampled_with_target.csv\", index=False)"
@@ -502,9 +487,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "textToSpeech",
    "language": "python",
-   "name": "python3"
+   "name": "texttospeech"
   },
   "language_info": {
    "codemirror_mode": {
