--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -487,9 +487,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "textToSpeech",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "texttospeech"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -501,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
