Aggiunto main e classe per inferenze. Per ora tutto funzionante

--- a/classificatore.ipynb
+++ b/classificatore.ipynb
@@ -805,6 +805,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Training del Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:10: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "<>:10: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "C:\\Users\\gians_ji5genm\\AppData\\Local\\Temp\\ipykernel_13684\\2751728401.py:10: SyntaxWarning: invalid escape sequence '\\T'\n",
+      "  X_train_target = pd.read_csv('Dataset\\Train\\X_train_with_trq_margin.csv')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuratezza del modello Random Forest: 99.90%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd\n",
+    "import joblib\n",
+    "\n",
+    "# Carica il dataset\n",
+    "X_train_target = pd.read_csv('Dataset\\Train\\X_train_with_trq_margin.csv')\n",
+    "\n",
+    "# Seleziona le colonne per le caratteristiche (X) e l'etichetta (y)\n",
+    "X = X_train_target[['trq_measured', 'oat', 'mgt', 'pa', 'ias', 'np', 'ng', 'trq_target', 'trq_margin']]\n",
+    "y = X_train_target['faulty']\n",
+    "\n",
+    "# Dividi il dataset in un training set e un test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Crea il modello Random Forest\n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "\n",
+    "# Allena il modello\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Fai delle previsioni sul test set\n",
+    "y_pred = rf.predict(X_test)\n",
+    "\n",
+    "# Calcola l'accuratezza del modello\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "# Salva il modello addestrato in un file\n",
+    "joblib.dump(rf, 'random_forest_modelClassifier.pkl')\n",
+    "\n",
+    "# Stampa il risultato\n",
+    "print(f\"Accuratezza del modello Random Forest: {accuracy * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Confidence score RandomForestClassifier"
    ]
   },
@@ -2770,7 +2838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
