--- a/Data_analysis/pre_processing.ipynb
+++ b/Data_analysis/pre_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -49,8 +49,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# 1. Lettura dei dati\n",
-    "X_train = pd.read_csv(\"Dataset/Train/X_train.csv\")\n",
-    "y_train = pd.read_csv(\"Dataset/Train/y_train.csv\")\n",
+    "X_train = pd.read_csv(\"../Dataset/Train/X_train.csv\")\n",
+    "y_train = pd.read_csv(\"../Dataset/Train/y_train.csv\")\n",
     "\n",
     "# Conta le occorrenze delle classi faulty (0 e 1)\n",
     "faulty_counts = y_train['faulty'].value_counts()\n",
@@ -88,15 +88,15 @@
     "})\n",
     "\n",
     "# 6. Salvare i nuovi DataFrame nei file CSV\n",
-    "df_X_scaled.to_csv(\"Dataset/Train/X_train_resampled.csv\", index=False)\n",
-    "y_train_final.to_csv(\"Dataset/Train/y_train_resampled.csv\", index=False)\n",
+    "df_X_scaled.to_csv(\"../Dataset/Train/X_train_resampled.csv\", index=False)\n",
+    "y_train_final.to_csv(\"../Dataset/Train/y_train_resampled.csv\", index=False)\n",
     "\n",
     "print(\"I file sono stati salvati correttamente come X_train_resampled.csv e y_train_resampled.csv.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "max    1.038079e+00  1.592338e+00  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "max    598835.000000       1.0      33.597754"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,13 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "#Lettura dei dataset\n",
-    "X_t_res = pd.read_csv(\"Dataset/Train/X_train_resampled.csv\")\n",
-    "y_t_res = pd.read_csv(\"Dataset/Train/y_train_resampled.csv\")\n",
+    "X_t_res = pd.read_csv(\"../Dataset/Train/X_train_resampled.csv\")\n",
+    "y_t_res = pd.read_csv(\"../Dataset/Train/y_train_resampled.csv\")\n",
     "\n",
     "#Definisco le variabili di interesse\n",
     "trq_measured = X_t_res['trq_measured']\n",
@@ -378,7 +379,7 @@
     "X_t_res['faulty'] = faulty\n",
     "\n",
     "# Salvataggio del nuovo dataset con la colonna aggiunta\n",
-    "X_t_res.to_csv(\"Dataset/Train/X_train_resampled_with_target.csv\", index=False)"
+    "X_t_res.to_csv(\"../Dataset/Train/X_train_resampled_with_target.csv\", index=False)"
    ]
   },
   {
@@ -487,9 +488,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "textToSpeech",
    "language": "python",
-   "name": "python3"
+   "name": "texttospeech"
   },
   "language_info": {
    "codemirror_mode": {
