--- a/Training_models/classificatore.ipynb
+++ b/Training_models/classificatore.ipynb
@@ -251,7 +251,6 @@
     "from sklearn.metrics import classification_report, accuracy_score\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "# Supponiamo che df sia il DataFrame contenente i dati, già preparati\n",
     "y = df['faulty'].values\n",
     "X = df.drop(columns=['trq_target', 'faulty'])\n",
     "\n",
@@ -795,7 +794,6 @@
     "    print(f\"Classification Report:\\n{report}\")\n",
     "    print(\"=\"*50)\n",
     "\n",
-    "# Se vuoi confrontare anche la validazione incrociata\n",
     "for name, clf in classifiers.items():\n",
     "    cv_scores = cross_val_score(clf, X, y, cv=5)  # 5-fold cross-validation\n",
     "    print(f\"{name} - CV Accuracy: {cv_scores.mean():.4f} ± {cv_scores.std():.4f}\")\n"
@@ -843,11 +841,11 @@
     "# Carica il dataset\n",
     "X_train_target = pd.read_csv('Dataset\\Train\\X_train_with_trq_margin.csv')\n",
     "\n",
-    "# Seleziona le colonne per le caratteristiche (X) e l'etichetta (y)\n",
+    "# Selezioniamo le colonne per le caratteristiche (X) e l'etichetta (y)\n",
     "X = X_train_target[['trq_measured', 'oat', 'mgt', 'pa', 'ias', 'np', 'ng', 'trq_target', 'trq_margin']]\n",
     "y = X_train_target['faulty']\n",
     "\n",
-    "# Dividi il dataset in un training set e un test set\n",
+    "# Divido il dataset in un training set e un test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Crea il modello Random Forest\n",
@@ -856,7 +854,7 @@
     "# Allena il modello\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
-    "# Fai delle previsioni sul test set\n",
+    "# Esegue delle previsioni sul test set\n",
     "y_pred = rf.predict(X_test)\n",
     "\n",
     "# Calcola l'accuratezza del modello\n",
@@ -1003,7 +1001,7 @@
     "results = {}\n",
     "\n",
     "# Salvo i risultati\n",
-    "name = \"RandomForest\"  # Assegna un nome al modello\n",
+    "name = \"RandomForest\"\n",
     "results[name] = {\n",
     "    \"accuracy\": accuracy,\n",
     "    \"classification_report\": report\n",
