--- a/Training_models/polynomial_regression.ipynb
+++ b/Training_models/polynomial_regression.ipynb
@@ -558,7 +558,7 @@
     "# Parametri per il Random Forest Regressor\n",
     "rf_param_dist = {\n",
     "    'n_estimators': [100, 200, 300],\n",
-    "    'max_depth': [10, 20, 30, None],  # None significa che non viene imposta alcuna profondità massima\n",
+    "    'max_depth': [10, 20, 30, None],\n",
     "    'min_samples_split': [2, 5, 10],\n",
     "    'min_samples_leaf': [1, 2, 4],\n",
     "    'max_features': ['auto', 'sqrt', 'log2']\n",
@@ -573,12 +573,12 @@
     "    param_distributions=rf_param_dist, \n",
     "    n_iter=50,  # Numero di combinazioni casuali da esplorare\n",
     "    cv=3, \n",
-    "    n_jobs=-1,  # Utilizza tutti i core disponibili\n",
+    "    n_jobs=-1,\n",
     "    verbose=2, \n",
     "    random_state=42\n",
     ")\n",
     "\n",
-    "# Esegui la RandomizedSearchCV\n",
+    "# Esecuzione della RandomizedSearchCV\n",
     "random_search_rf.fit(X_train, y_train)\n",
     "\n",
     "# Visualizza i migliori parametri trovati\n",
@@ -1430,9 +1430,9 @@
     "}\n",
     "\n",
     "for i in range(len(X_test)):\n",
-    "    single_pred_samples = all_tree_preds[:, i]  # Estrai le predizioni per il singolo punto\n",
+    "    single_pred_samples = all_tree_preds[:, i]\n",
     "    best_fit = None\n",
-    "    best_ll = -np.inf  # Log-likelihood iniziale molto bassa\n",
+    "    best_ll = -np.inf\n",
     "    best_params = None\n",
     "    best_pdf_type = None\n",
     "\n",
@@ -1459,9 +1459,8 @@
     "            \"scale\": best_params[2] if len(best_params) > 2 else 1\n",
     "        }\n",
     "\n",
-    "        # Se la distribuzione ha altri parametri (es. shape per gamma), aggiungili\n",
     "        if len(best_params) > 3:\n",
-    "            pdf_args[\"shape\"] = best_params[0]  # Il primo parametro è spesso un shape\n",
+    "            pdf_args[\"shape\"] = best_params[0]\n",
     "\n",
     "    else:\n",
     "        pdf_args = {}\n",
@@ -2946,7 +2945,7 @@
     "            ks_stat, ks_pvalue = kstest(data, dist.cdf, args=params)\n",
     "            results.append((dist_name, ks_stat, ks_pvalue))\n",
     "        except Exception:\n",
-    "            results.append((dist_name, np.inf, 0))  # Errore nella stima\n",
+    "            results.append((dist_name, np.inf, 0))\n",
     "\n",
     "    # Ordina i risultati per KS statistic (più basso è meglio)\n",
     "    results = sorted(results, key=lambda x: x[1])\n",
@@ -4307,7 +4306,7 @@
     "            ks_stat, ks_pvalue = kstest(data, dist.cdf, args=params)\n",
     "            results.append((dist_name, ks_stat, ks_pvalue))\n",
     "        except Exception:\n",
-    "            results.append((dist_name, np.inf, 0))  # Errore nella stima\n",
+    "            results.append((dist_name, np.inf, 0))\n",
     "\n",
     "    # Ordina i risultati per KS statistic (più basso è meglio)\n",
     "    results = sorted(results, key=lambda x: x[1])\n",
@@ -4427,13 +4426,13 @@
     "\n",
     "# Controlla che la colonna esista\n",
     "if \"trq_margin\" in data.columns:\n",
-    "    # Estrai la colonna 'trq_margin' e rimuovi valori nulli\n",
+    "    # Estraggo la colonna 'trq_margin' e rimozione dei valori nulli\n",
     "    trq_margin = data[\"trq_margin\"].dropna()\n",
     "    \n",
     "    # Stima dei parametri della distribuzione di Student-t\n",
     "    df_t, loc, scale = t.fit(trq_margin)\n",
     "    \n",
-    "    # Definisci un range più ristretto per x_vals\n",
+    "    # Definisco un range più ristretto per x_vals\n",
     "    lower_bound = np.percentile(trq_margin, 1)  # 1° percentile\n",
     "    upper_bound = np.percentile(trq_margin, 99)  # 99° percentile\n",
     "    x_vals = np.linspace(lower_bound, upper_bound, 500)\n",
